Fixed profile pictures stretching. Added links and their icons only render if the link is not null.

--- a/src/style.css
+++ b/src/style.css
@@ -38,6 +38,7 @@ body,
 }
 
 .card__image {
+  object-fit: cover;
   height: 160px;
   width: 160px;
   border-radius: 50%;
